fixed songtable vh mobile issue vh includes the top retracting search bar on mobile browsers. fixed with longer padding beneath song table

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -74,6 +74,7 @@ Styling             - individual content styling
 /* ========== PLAYLIST SONG LIST ==== */
 #table-container {
     width: calc(100% - 60px);
+    padding-bottom: 70px;
     overflow: auto;
 }
 /* ========== LAYOUT MOBILE ========= */
